// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SportsContainer should match the snapshot 1`] = `
<section>
  <h2
    className="Sports-header"
  >
    Sport News
  </h2>
  <div
    className="sports-wrapper Card-wrapper"
  >
    <Card
      key="8E0VTTqpa"
      title="Golden"
    />
    <Card
      key="J0BPyzRcRm"
      title="Xavier Basketball"
    />
  </div>
</section>
`;

exports[`SportsContainer should render error message if the error is not an empty string and allsports.length === 0 1`] = `
<section>
  <h2
    className="Sports-header"
  >
    Sport News
  </h2>
  <div
    className="sports-wrapper Card-wrapper"
  >
    <div>
      <h2>
        something went wrong
      </h2>
      <Link
        to="/Options"
      >
        Back
      </Link>
    </div>
    <Loading />
  </div>
</section>
`;
